--- a/app/components/ProjectRoadmap.css
+++ b/app/components/ProjectRoadmap.css
@@ -214,7 +214,7 @@
 }
 
 /* Rotating Container */
-.rotating-milestones {
+.rotating-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -513,3 +513,4 @@
     font-size: 1.6rem;
   }
 }
+    
